#+TITLE: Guile-INI News -- history of user-visible changes.
#+STARTUP: content hidestars

Copyright (C) Artyom V. Poptsov <poptsov.artyom@gmail.com>

  Copying and distribution of this file, with or without modification,
  are permitted in any medium without royalty provided the copyright
  notice and this notice are preserved.

* Version 0.5.4 (2023-10-11)
** =ini->scm= now allows to set the logging driver and options
=ini->scm= would always use "syslog" logger and would fail when the "syslog"
is not available on the system.  Now the procedure allows to set the logger
driver and its options.
** Update the Texinfo documentation
** Add more usage examples
See the =examples= directory.
* Version 0.5.3 (2023-05-01)
** Update to work with the latest version of Guile-SMC
* Version 0.5.2 (2022-09-24)
** =ini->scm=: Fix the debug mode
Load =fsm-statistics= procedure from =(smc fsm)= module when debug mode is
enabled.
** Fix build order
Now Guile-SMC intermediate context is generated before the files that depend
on it.

Reported by Aleix Conchillo Flaqué here:
<https://github.com/artyom-poptsov/guile-ini/pull/3>
** Fix =make distcheck=
Guile-INI now successfully builds with =make distcheck=.
* Version 0.5.1 (2022-09-02)
** Update to use the new Guile-SMC logging subsystem
Guile-SMC log driver for context generation and the FSM compilation is now set
to "file".  The output log files are stored in the build directory.

All Guile-SMC logs during tests are now written to the corresponding files in
"tests".
* Version 0.5.0 (2022-08-23)
** Update to use the new Guile-SMC 0.5.0 API
** configure.ac: Accept '--enable-standalone' option
This allows to enable "standalone" mode of FSM compilation that produce the
code that does not depend on Guile-SMC in the target system.
* Version 0.4.0 (2022-03-13)
** Update to use the new Guile-SMC 0.4.0 API
** Add =guix.scm= to the repository
   The file contains GNU Guix package recipe.
* Version 0.3.0 (2021-12-05)